# nudock

./: CMakeLists.txt  LICENSE  README.md  nudock.cpp  nudock.hpp
cmake/: NuDockConfig.cmake.in  httplibConfig.cmake.in  jsonSchemaValidatorConfig.cmake.in
schemas/: get_parameters.schema.json  get_spectrum.schema.json  log_likelihood_strict.schema.json  set_asimov_point.schema.json  set_parameters.schema.json
tests/: CMakeLists.txt  client.cpp  server.cpp
